media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    matchLabels:
      app: sabnzbd
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - image: ghcr.io/hotio/sabnzbd:latest
          name: sabnzbd
          ports:
            - containerPort: 8080
              name: sabnzbd
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config
            - mountPath: /downloads
              name: sabnzbd-downloads
      volumes:
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
