media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  ports:
    - port: 8080
      name: sabnzbd
  selector:
    app: sabnzbd
